# future-of-search

./: .gitignore  README.md  agentcore.yaml  pyproject.toml  requirements.txt
.kiro/specs/customer-search-agent/: design.md  requirements.md  tasks.md
src/customer_search_agent/: __init__.py  config.py  kiro-prompt  main.py
src/customer_search_agent/models/: __init__.py  data_models.py
src/customer_search_agent/services/: __init__.py  knowledge_retrieval.py  personalisation.py
